package com.xinqihd.sns.gameserver.proto;
//Get the server list

option java_outer_classname = "XinqiBceDeleteRole"; 

message BceDeleteRole {
  /**
  * The user delete the userid at given server
  */
  optional string userid = 1;
  optional string serverid = 2;
}
