package com.xinqihd.sns.gameserver.proto;
//Get the server list

option java_outer_classname = "XinqiBseDeleteRole"; 

message BseDeleteRole {
  optional int32 errorcode = 1;
  optional string desc = 2;
}
